# nanogpt

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  venv.sh
src/nanogpt/: training.py
src/nanogpt/data/: base.py  shakespeare.py  tokenizer.py
src/nanogpt/models/: gpt2.py  utils.py
tests/test_nanogpt/: test_training.py
tests/test_nanogpt/test_data/: test_shakespeare.py  test_tokenizer.py
tests/test_nanogpt/test_models/: test_gpt2.py
